--- a/PrediSalud/templates/registro.html
+++ b/PrediSalud/templates/registro.html
@@ -455,7 +455,7 @@
                 <i class="fas fa-shield-halved"></i>
                 <span>Institucional</span>
             </a>
-            <a href="./dashboard2.htm" class="social-btn">
+            <a href="./dashboard2.html" class="social-btn">
                 <i class="fas fa-arrow-left"></i>
                 <span>Volver</span>
             </a>
