--- a/PrediSalud/templates/index.html
+++ b/PrediSalud/templates/index.html
@@ -105,15 +105,12 @@
 						</li>
 						<li class="nav-item"><a class="nav-link" href="contact.html">Contacto</a></li>
 
-						<li class="nav-item"><a class="nav-link" href="login_integrated.html">Inicia Sesión</a></li>
+
 					</ul>
 				</div>
 			</div>
 		</nav>
 	</header>
-
-
-
 
 	<!-- Slider Start -->
 	<section class="banner">
@@ -605,7 +602,7 @@
 				<div class="col-lg-4 mr-auto col-sm-6">
 					<div class="widget mb-5 mb-lg-0">
 						<div class="logo mb-4">
-							<img src="images/logo.png" alt="" class="img-fluid">
+							<img src="images/logoSF.png" alt="" class="img-fluid">
 						</div>
 						<p>PrediSalud se compromete a brindar atención médica de la más alta calidad, utilizando
 							tecnología avanzada y un equipo de profesionales expertos para garantizar el bienestar
